# 2-bayes-rule-MightyHelper

./: main.py  pyproject.toml
notebooks/: bayes-rule.ipynb  floating-point.ipynb  matplotlib.ipynb  population.ipynb
